Closed
Bug 311550
Opened 19 years ago
Closed 19 years ago
[FIX]EndUpdateViewBatch sometimes does lots of extra work
Categories
(Core :: Web Painting, defect, P2)
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: bzbarsky, Assigned: bzbarsky)
References
Details
(Keywords: perf)
Attachments
(1 file)
992 bytes,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
If an update view batch is ended and it was a DEFERRED batch, we'll post an
invalidate event. We'll even do this if mHasPendingUpdates is false. This
seems unfortunate -- posting an invalidate event is pretty expensive.
I think we should just bail out of nsViewManager::EnableRefresh early if there
are no pending updates. Failing that, perhaps we should bail out of
PostInvalidateEvent early.
![]() |
Assignee | |
Updated•19 years ago
|
Priority: -- → P2
Target Milestone: --- → mozilla1.9alpha
![]() |
Assignee | |
Comment 1•19 years ago
|
||
Attachment #198822 -
Flags: superreview?(roc)
Attachment #198822 -
Flags: review?(roc)
Attachment #198822 -
Flags: superreview?(roc)
Attachment #198822 -
Flags: superreview+
Attachment #198822 -
Flags: review?(roc)
Attachment #198822 -
Flags: review+
![]() |
Assignee | |
Comment 2•19 years ago
|
||
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 3•19 years ago
|
||
There's no way this could have caused bug 325455, is there? I may be reaching, but there aren't many trunk-only patches checked in between 20051007 and 20051008 that seemed to be likely suspects.
![]() |
Assignee | |
Comment 4•19 years ago
|
||
Possibly, I suppose, but unlikely. Is bug 325455 reproducible on non-Mac? That is, would it be possible for me to reproduce it on Linux and thus test whether this patch is the issue?
Comment 5•19 years ago
|
||
I know the bug doesn't occur on Windows, but I don't have any way of checking it on Linux.
Updated•7 years ago
|
Component: Layout: View Rendering → Layout: Web Painting
You need to log in
before you can comment on or make changes to this bug.
Description
•