Fix bug 311550 -- Don't do anything in EnableRefresh if there are no pending updates.  r+sr=roc